@@ -30,6 +30,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #3839: wsgiref should not override a Content-Length header set by
+  the application.  Initial patch by Clovis Fabricio.
+
 - Issue #10492: bdb.Bdb.run() only traces the execution of the code, not the
   compilation (if the input is a string).
 
